--- a/phone.html
+++ b/phone.html
@@ -41,11 +41,13 @@
     ctx.fillStyle = 'white';
 
     $(document).keydown(function(e) {
+      console.log('keydown ' + e.keyCode);
       e.preventDefault();
       socket.emit('move', { keyCode: e.keyCode });
     });
 
     socket.on('move', function(data){
+      console.log('move ' + data.keyCode);
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.beginPath();
       switch(data.keyCode) {
